kubernetes/local/next/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: next.brickcatalog.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next
            port:
              name: http
  - host: de.next.brickcatalog.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next
            port:
              name: http
  - host: en.next.brickcatalog.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next
            port:
              name: http
  - host: es.next.brickcatalog.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next
            port:
              name: http
  - host: fr.next.brickcatalog.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next
            port:
              name: http
  - host: nl.next.brickcatalog.kubernetes.localhost
    http:
      paths:
        - path: /
          pathType: Prefix 
          backend:
            service:
              name: next
              port:
                name: http

  - host: api.next.brickcatalog.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next
            port:
              name: http
